--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,12 @@
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "angular-cookies": "1.2.11",
-    "pure": "~0.4.2"
+    "pure": "~0.4.2",
+    "angular-ui-router": "git://github.com/angular-ui/ui-router.git#master",
+    "angular-cache": "~2.3.0",
+    "angular-promise-tracker": "~1.5.1",
+    "lodash": "~2.4.1",
+    "ng-file-upload": "~1.2.7"
   },
   "devDependencies": {
     "angular-mocks": "1.2.11",
