--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "sequelize": "~1.7.0-rc6",
     "pg": "~2.11.1",
     "q": "~1.0.0",
-    "async": "~0.2.10"
+    "async": "~0.2.10",
+    "busboy": "~0.1.0",
+    "multiparty": "~3.2.2"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
